# clp

./: .cr.yaml  .gitattributes  .gitignore  .gitmodules  .yamllint.yaml  .yamllint.yml  BUILDING.md  CHANGELOG.md  CLAUDE.md  CMakeLists.txt  Cargo.toml  NOTICE  README.md  S3-Credentials-Design.md  TELEMETRY_IMPLEMENTATION_PLAN.md  Taskfile.yml  chart_schema.yaml  clp-0.1.3-dev.2.tgz  clp-0.1.3.tgz  clp-0.1.4-dev.1.tgz  clp-0.1.4-dev.2.tgz  clp-0.1.4-dev.3.tgz  clp-0.1.4-dev.4.tgz  clp-0.2.0-dev.0.tgz  clp-0.2.0-dev.1.tgz  clp-0.2.0-dev.2.tgz  clp-0.2.0.tgz  clp-0.2.1-dev.0.tgz  clp-0.2.1-dev.1.tgz  clp-0.2.1-dev.2.tgz  clp-0.2.1-dev.3.tgz  clp-0.2.1-dev.4.tgz  clp-0.2.1-dev.5.tgz  clp-0.2.1-dev.6.tgz  clp-0.3.0.tgz  clp-0.3.1-dev.0.tgz  clp-0.3.1-dev.1.tgz  clp-0.3.1.tgz  clp-0.3.2-dev.0.tgz  clp-0.3.2-dev.1.tgz  (+35 more)
clp-telemetry-server/: Cargo.toml  docker-compose.yaml
clp-telemetry-server/deployment/: Caddyfile  Dockerfile
clp-telemetry-server/src/: main.rs
components/api-server/: Cargo.toml  README.md
components/api-server/src/: client.rs  error.rs  lib.rs  query_dedup.rs  routes.rs  telemetry.rs
components/clp-credential-manager/: Cargo.toml
components/clp-credential-manager/src/: audit.rs  config.rs  error.rs  main.rs  routes.rs  service.rs
components/clp-mcp-server/: README.md  README_SESSION_MANAGEMENT.md  pyproject.toml
components/clp-mcp-server/clp_mcp_server/: __init__.py  __main__.py  clp_connector.py  clp_mcp_server.py  constants.py  main.py  server.py  settings.py
components/clp-mcp-server/tests/: __init__.py  test_clp_connector.py  test_session_manager.py  test_validator.py
components/clp-package-utils/: README.md  pyproject.toml  requirements.txt
components/clp-package-utils/clp_package_utils/: __init__.py  cli_utils.py  controller.py  controllers.py  general.py  webui_settings.py
components/clp-py-utils/: README.md  constraints.txt  pyproject.toml  requirements.txt
components/clp-py-utils/clp_py_utils/: clp_config.py  clp_io_config.py  clp_logging.py  clp_metadata_db_utils.py  clp_package_config.py  compression.py  constants.py  core.py  create-db-tables.py  create-results-cache-indexes.py  create-results-cache-indices.py  decorators.py  initialize-admin-db-user.py  initialize-clp-metadata-db.py  initialize-orchestration-db.py  initialize-privileged-db-user.py  initialize-results-cache.py  initialize-search-scheduler-db.py  initialize-spider-db.py  initialize_clp_metadata_db.py  pretty_size.py  profiling_utils.py  pydantic_serialization_utils.py  result.py  s3_credential_manager.py  s3_utils.py  serialization_utils.py  sql_adapter.py  sql_table_schema_utils.py  start-spider-worker.py  telemetry.py  telemetry_config.py  zstd_msgpack.py
components/clp-py-utils/tests/: test_results_cache.py
components/clp-rust-utils/: Cargo.toml
components/clp-rust-utils/src/: archive_metadata.rs  aws.rs  clp_config.rs  database.rs  dataset.rs  error.rs  ingestion_job.rs  job_config.rs  kafka.rs  lib.rs  logging.rs  package_config.rs  s3.rs  serde.rs  sqs.rs  telemetry.rs  types.rs
components/clp-rust-utils/tests/: clp_config_test.rs  s3_event_test.rs  s3_url_test.rs  sqs_test.rs
components/clp-tdl-package/: Cargo.toml
components/clp-tdl-package/src/: common.rs  lib.rs
components/compression-coordinator/: Cargo.toml
components/compression-coordinator/src/: compression_job_submitter.rs  coordination.rs  error.rs  job_handle.rs  lib.rs  partition.rs
components/compression-job-handler/: .gitignore  README.md  pyproject.toml  requirements.txt
components/compression-job-handler/compression_job_handler/: common.py  compression_db_manager.py  compression_job_handler.py  main.py  partition.py
components/core/: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  README-Schema.md  README.md  Taskfile.yml  expected.old
components/core/cmake/: find_utils.cmake  utils.cmake
components/core/config/: metadata-db.yml  schemas.txt
components/core/include/: string_utils.hpp  string_utils.inc
components/core/src/: ArrayBackedPosIntSet.cpp  ArrayBackedPosIntSet.hpp  BoolVector.cpp  BoolVector.hpp  BufferReader.cpp  BufferReader.hpp  BufferedFileReader.cpp  BufferedFileReader.hpp  BufferedReaderInterface.cpp  BufferedReaderInterface.hpp  CMakeLists.txt  CommandLineArgumentsBase.cpp  CommandLineArgumentsBase.hpp  Defs.h  DictionaryEntry.cpp  DictionaryEntry.hpp  DictionaryReader.cpp  DictionaryReader.hpp  DictionaryWriter.hpp  EncodedVariableInterpreter.cpp  EncodedVariableInterpreter.hpp  ErrorCode.hpp  FileReader.cpp  FileReader.hpp  FileReaderSys.cpp  FileReaderSys.hpp  FileWriter.cpp  FileWriter.hpp  GlobalMetadataDB.cpp  GlobalMetadataDB.hpp  GlobalMetadataDBConfig.cpp  GlobalMetadataDBConfig.hpp  GlobalMySQLMetadataDB.cpp  GlobalMySQLMetadataDB.hpp  GlobalSQLiteMetadataDB.cpp  GlobalSQLiteMetadataDB.hpp  Grep.cpp  Grep.hpp  IDOccurrenceArray.cpp  IDOccurrenceArray.hpp  (+80 more)
components/core/tests/: ClpSTestUtils.cpp  LogSuppressor.hpp  MockLogTypeDictionary.hpp  MockVariableDictionary.hpp  SchemaSearcherTest.hpp  TestOutputCleaner.hpp  catch2_test_utils.cpp  clp_s_test_utils.cpp  clp_s_test_utils.hpp  search_test_utils.cpp  search_test_utils.hpp  test-Array.cpp  test-BoundedReader.cpp  test-BufferedFileReader.cpp  test-BufferedReader.cpp  test-CheckpointReader.cpp  test-EncodedVariableInterpreter.cpp  test-FileReader.cpp  (+51 more)
components/job-orchestration/: README.md  pyproject.toml  requirements.txt
components/log-ingestor/: Cargo.toml  README.md
components/spider-orchestration/: README.md  pyproject.toml
components/webui-query-handler/: pyproject.toml
integration-tests/: .pytest.ini  README.md  pyproject.toml
integration-tests/tests/: __init__.py  conftest.py  test_clp_native_py_project_imports.py  test_clp_s_filter_build.py  test_identity_transformation.py  test_log_converter.py  test_mcp_server.py  test_package_lifecycle.py  test_package_start.py
python-wheels/clp-core/: CMakeLists.txt  README.md  pyproject.toml  requirements-dev.txt
python-wheels/yscope-clp-core/: .gitignore  CMakeLists.txt  README.md  pyproject.toml
(+4471 files in other folders)
