[project]
name = "integration-tests"
version = "0.1.0"
description = "Integration tests for CLP."
readme = "README.md"
authors = [
    { name = "YScope Inc.", email = "dev@yscope.com" }
]
requires-python = ">=3.10"

[project.scripts]
integration-tests = "integration_tests:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
clp = [
    "clp-mcp-server",
    "clp-package-utils",
    "clp-py-utils",
    "job-orchestration",
]
dev = [
    "mypy>=1.16.0",
    "ruff>=0.11.12",
    "pytest>=9.0.2",
    "pytest-env>=1.2.0",
    "PyYAML>=6.0.3",
    "types-PyYAML>=6.0.12.20250915",
]

[tool.mypy]
strict = true

# Additional output
pretty = true
show_error_code_links = true
show_error_context = true
show_error_end = true

[tool.ruff]
extend = "../tools/yscope-dev-utils/exports/lint-configs/python/ruff.toml"

[tool.ruff.lint]
ignore = ["TRY400"]

[tool.uv]
default-groups = ["clp", "dev"]

[tool.uv.sources]
clp-mcp-server = { path = "../components/clp-mcp-server", editable = true }
clp-package-utils = { path = "../components/clp-package-utils", editable = true }
clp-py-utils = { path = "../components/clp-py-utils", editable = true }
job-orchestration = { path = "../components/job-orchestration", editable = true }
