[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "clp_client"
path = "src/lib.rs"

[[bin]]
name = "api_server"
path  = "src/bin/api_server.rs"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["json"] }
clap = { version = "4.5.51", features = ["derive"] }
clp-rust-utils = { path = "../clp-rust-utils" }
futures = "0.3.31"
mongodb = "3.3.0"
num_enum = "0.7.5"
rmp-serde = "1.3.0"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.20", features = ["json", "env-filter", "fmt", "std"] }
