[package]
name = "api-server"
version = "0.1.0"
edition = "2024"

[lib]
name = "api_server"
path = "src/lib.rs"

[[bin]]
name = "api_server"
path  = "src/bin/api_server.rs"

[[bin]]
name = "api-server-openapi-codegen"
path = "src/bin/openapi_codegen.rs"

[dependencies]
anyhow = "1.0.100"
async-stream = "0.3.6"
aws-sdk-s3 = "1.121.0"
axum = { version = "0.8.8", features = ["json"] }
clap = { version = "4.5.56", features = ["derive"] }
clp-rust-utils = { path = "../clp-rust-utils" }
futures = "0.3.31"
mongodb = "3.5.0"
num_enum = "0.7.5"
non-empty-string = { version = "0.2.6", features = ["serde"] }
pin-project-lite = "0.2.16"
rmp-serde = "1.3.1"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql"] }
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = { version = "0.1.18", features = ["fs"] }
tower-http = { version = "0.6.8", features = ["cors"] }
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter", "fmt", "std"] }
utoipa = { version = "5.4.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
