[package]
name = "clp-credential-manager"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["json"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.51", features = ["derive"] }
clp-rust-utils = { path = "../clp-rust-utils" }
jsonwebtoken = "9.3.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql", "macros", "chrono"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.5.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt", "json", "std"] }
uuid = { version = "1.11.1", features = ["v4", "serde"] }
aws-config = "1.5.1"
aws-sdk-sts = "1.48.0"

[dev-dependencies]
reqwest = { version = "0.12.9", features = ["json"] }
