[project]
name = "clp-mcp-server"
version = "0.9.0"
description = "MCP server for CLP"
authors = [{name = "YScope Inc.", email = "dev@yscope.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiomysql>=0.3.2",
    "click>=8.3.1",
    "fastmcp>=2.14.4",
    "msgpack>=1.1.2",
    "paginate>=0.5.7",
    "pymongo>=4.16.0",
]

[project.scripts]
clp-mcp-server = "clp_mcp_server.clp_mcp_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
clp = [
    "clp-py-utils",
]
dev = [
    "mypy>=1.16.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-env>=1.2.0",
    "pytest-repeat>=0.9.4",
    "ruff>=0.11.12",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
strict = true

# Additional output
pretty = true
show_error_code_links = true
show_error_context = true
show_error_end = true

[tool.ruff]
extend = "../../ruff.toml"

[tool.uv]
default-groups = ["clp", "dev"]

[tool.uv.sources]
clp-py-utils = { path = "../clp-py-utils", editable = true }
