[project]
name = "clp-package-utils"
version = "0.5.2-dev"
description = "Utilities for the CLP package."
authors = [{name = "YScope Inc.", email = "dev@yscope.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Brotli>=1.1.0",
    "msgpack>=1.1.2",
    "psutil>=7.1.0",
    "pydantic>=2.12.3",
    "pymongo>=4.15.3",
    "PyYAML>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
