[project]
name = "clp-package-utils"
version = "0.7.1-dev"
description = "Utilities for the CLP package."
authors = [{name = "YScope Inc.", email = "dev@yscope.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "Brotli>=1.1.0",
    "click>=8.3.1",
    "msgpack>=1.1.2",
    "psutil>=7.1.0",
    "pydantic>=2.12.3",
    "pymongo>=4.15.3",
    "PyYAML>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
clp = [
    "clp-py-utils",
    "job-orchestration",
]
dev = [
    "mypy>=1.18.2",
    "ruff>=0.14.4",
]

[tool.mypy]
strict = true

# Additional output
pretty = true
show_error_code_links = true
show_error_context = true
show_error_end = true

[tool.ruff]
extend = "../../ruff.toml"

[tool.uv]
default-groups = ["clp", "dev"]

[tool.uv.sources]
clp-py-utils = { path = "../clp-py-utils" }
job-orchestration = { path = "../job-orchestration" }
