[project]
name = "clp-py-utils"
version = "0.6.1-dev"
description = "Utilities for other Python packages in CLP."
authors = [{name = "YScope Inc.", email = "dev@yscope.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.40.55",
    "mariadb>=1.1.14",
    "mysql-connector-python>=9.4.0",
    "pydantic>=2.12.3",
    "python-Levenshtein>=0.27.1",
    "PyYAML>=6.0.3",
    "result>=0.17.0",
    "sqlalchemy>=2.0.44",
    "StrEnum>=0.4.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
