[package]
name = "clp-rust-utils"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-config = "1.8.10"
aws-sdk-s3 = "1.110.0"
aws-sdk-sqs = "1.88.0"
brotli = "8.0.2"
num_enum = "0.7.5"
non-empty-string = { version = "0.2.6", features = ["serde"] }
rmp-serde = "1.3.0"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql"] }
thiserror = "2.0.17"

[dev-dependencies]
hex = "0.4.3"
serde_json = "1.0.145"
