[package]
name = "clp-rust-utils"
version = "0.13.1-dev"
edition = "2024"

[dependencies]
aws-config = "1.8.12"
aws-sdk-s3 = "1.121.0"
aws-sdk-sqs = "1.92.0"
libzstd-rs-sys = "0.0.1-prerelease.2"
non-empty-string = { version = "0.2.6", features = ["serde"] }
num_enum = "0.7.5"
opentelemetry = { version = "0.32.0" }
opentelemetry-otlp = { version = "0.32.0", default-features = false, features = ["metrics", "http-proto", "reqwest-blocking-client"] }
opentelemetry_sdk = { version = "0.32.1", features = ["metrics", "rt-tokio"] }
regex = "1.12.3"
rmp-serde = "1.3.1"
secrecy = { version = "0.10.3", features = ["serde"] }
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio", "mysql"] }
strum = { version = "0.28.0", features = ["derive"] }
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["json", "env-filter", "fmt", "std"] }
utoipa = { version = "5.4.0" }
yaml_serde = "0.10.4"

[dev-dependencies]
anyhow = "1.0.100"
serde_json = "1.0.149"
